# milvus-fastapi

./:  .env  .gitignore  LICENSE  README.md  a.html  main.py  mypy.ini  output.xlsx  pyproject.toml  test.py
api/: deps.py
api/api_v1/: api.py
api/api_v1/endpoints/: icon.py  login.py  publish_item.py  user.py
api/utils/: init_items.py
core/: config.py  security.py
db/: base.py  init_db.py  session.py
db/crud/: __init__.py  base.py  crud_item.py  crud_like.py  crud_user.py
db/models/: __init__.py  like.py  published_item.py  user.py
schemas/: __init__.py  like.py  publish.py  user.py
src/app/: __init__.py  initial_data.py  main.py  pre_start.py
src/app/api/: deps.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: patient.py
src/app/core/: config.py
src/app/db/: README.md  __init__.py  base.py  init_db.py  proxy.py  session.py
src/app/db/crud/: __init__.py  crud_patient.py
src/app/db/models/: patient_2.py  patients.py  table.py
src/app/milvus/: client.py  config.py  embedding.py  pipe.py  types.py
src/app/schemas/: __init__.py  patient.py  patient1.py  patient2.py
src/example/: api.ipynb  api调用.py  model.py
src/fastapi_test/: pre_start.py
src/fastapi_test/api/: deps.py
src/fastapi_test/db/: base.py
src/fastapi_test/milvus/: client.py
src/fastapi_test/schemas/: patient.py
src/milvus_backend/: __init__.py  initial_data.py  pre_start.py
src/milvus_backend/api/api_v1/: api.py
src/milvus_backend/api/api_v1/endpoints/: patient.py
src/milvus_backend/core/: config.py
src/milvus_backend/db/: init_db.py  session.py
src/milvus_backend/db/crud/: crud_patient.py
src/milvus_backend/milvus/: client.py  pipe.py
src/milvus_backend/schemas/: __init__.py  patient.py
src/示例/: api调用.py  model.py
