[project]
name = "milvus-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "termtate", email = "meng360842@gmail.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.1",
    "pydantic<2",
    "tenacity>=8.2.2",
    "pymilvus>=2.2.13",
    "towhee>=1.1.1",
    "pandas>=2.0.3",
    "towhee.models>=1.1.1",
    "setuptools>=68.0.0",
    "openpyxl>=3.1.2",
    "torch>=2.0.1",
    "transformers>=4.31.0",
    "httpx>=0.24.1",
    "nuitka>=1.7.9",
    "pyinstaller>=5.13.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[[sources]]
name = "default"
url = "https://mirror.baidu.com/pypi/simple"
