[project]
name = "milvus-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "termtate", email = "meng360842@gmail.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.1",
    "tenacity>=8.2.2",
    "pymilvus>=2.2.13",
    "pandas>=2.0.3",
    "setuptools>=68.0.0",
    "openpyxl>=3.1.2",
    "torch>=2.0.1",
    "httpx>=0.24.1",
    "nuitka>=1.7.9",
    # "pydantic>=2.2.1",
    "sentence-transformers>=2.2.2",
    "pydantic-settings>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
init = { call = "src.app.initial_data", env = { PYTHONPATH = "./src/app/"} }
pre-start = { call = "src.app.pre_start", env = { PYTHONPATH = "./src/app/"} }
[tool.rye.scripts.server]
cmd = [
    "python", "-m", 
    "uvicorn", "src.app.main:app", 
    "--host", "127.0.0.1",
    "--port", "8000"
]
env = { PYTHONPATH = "./src/app/"}

[[sources]]
name = "default"
url = "https://mirror.baidu.com/pypi/simple"
